--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Preload assets -->
+    <link rel="preload" href="/assets/1.webp" as="image" type="image/webp">
+    <link rel="preload" href="/assets/2.webp" as="image" type="image/webp">
     <title>Vite + React</title>
   </head>
   <body>
